crates/bitnet-inference/tests/snapshots/snapshot_wave25__w25_prefix_cache_config_default_debug.snap
---
source: crates/bitnet-inference/tests/snapshot_wave25.rs
expression: cfg
---
PrefixCacheConfig {
    max_entries: 1024,
    max_memory_bytes: 536870912,
    eviction_policy: LRU,
    min_prefix_length: 4,
    ttl_seconds: 3600,
}
