crates/bitnet-inference/tests/snapshots/snapshot_wave25__w25_profiler_config_custom.snap
---
source: crates/bitnet-inference/tests/snapshot_wave25.rs
expression: cfg
---
ProfilerConfig {
    enabled: true,
    record_memory: true,
    warmup_iterations: 5,
    sample_size: 100,
}
