crates/bitnet-inference/tests/snapshots/snapshot_wave25__w25_profiler_config_default_debug.snap
---
source: crates/bitnet-inference/tests/snapshot_wave25.rs
expression: cfg
---
ProfilerConfig {
    enabled: true,
    record_memory: false,
    warmup_iterations: 0,
    sample_size: 1,
}
