crates/bitnet-inference/tests/snapshots/snapshot_wave25__w25_profiler_config_disabled_debug.snap
---
source: crates/bitnet-inference/tests/snapshot_wave25.rs
expression: cfg
---
ProfilerConfig {
    enabled: false,
    record_memory: false,
    warmup_iterations: 0,
    sample_size: 1,
}
