crates/bitnet-inference/tests/snapshots/snapshot_wave25__w25_stream_config_default_debug.snap
---
source: crates/bitnet-inference/tests/snapshot_wave25.rs
expression: cfg
---
StreamConfig {
    buffer_size: 8,
    flush_on_whitespace: true,
    flush_on_newline: true,
    max_pending_tokens: 64,
}
