crates/bitnet-inference/tests/snapshots/snapshot_wave25__w25_stream_event_all_variants.snap
---
source: crates/bitnet-inference/tests/snapshot_wave25.rs
expression: events
---
[
    Token(
        100,
    ),
    Text(
        "hello",
    ),
    EndOfStream,
    Error(
        "invalid UTF-8 sequence",
    ),
]
