crates/bitnet-inference/tests/snapshots/snapshot_wave25__w25_stream_event_text.snap
---
source: crates/bitnet-inference/tests/snapshot_wave25.rs
expression: evt
---
Text(
    "Hello, world!",
)
